audio removed and added social links instead in the contact page

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <div class="d-flex flex-row justify-content-start ps-3">
                 <div class="col-auto"> 
                     <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
-                        <img src="multimedia/images/facebook.png" alt="Facebook icone" class="img-fluid social_icon" style="filter: invert(1);">
+                        <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
                 <div class="col-auto">
                     <a href="https://www.instagram.com/altos_spots/" class="d-inline-block custom-social-link">
-                        <img src="multimedia/images/instagram.png" alt="Instagram icone" class="img-fluid social_icon" style="filter: invert(1);">
+                        <img src="multimedia/images/instagram.png" alt="Instagram icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
                 <div class="col-auto">
                     <a href="https://www.youtube.com/@AltosSpots/featured" class="d-inline-block custom-social-link">
-                        <img src="multimedia/images/youtube.png" alt="Youtube icone" class="img-fluid social_icon" style="filter: invert(1);">
+                        <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
             </div>
