table removed and added a grid with the last youtube videos - in the about page

--- a/about.html
+++ b/about.html
@@ -58,32 +58,12 @@
                 </p>
         </section>
 
-        <!-- TABLE -->
-        <section>
-            <h3>Last Places we visited:</h3>
-            <table class="table table-dark table-hover table-striped table-bordered mt-4">
-                <thead>
-                  <tr>
-                    <th scope="col" class="fs-4">Place</th>
-                    <th scope="col" class="fs-4">Rating</th>
-                  </tr>
-                </thead>
-                <tbody class="table-group-divider">
-                  <tr>
-                    <td>Barragem da Aguieira</td>
-                    <td>4.8</td>
-                  </tr>
-                  <tr>
-                    <td>Passadiços do Paiva</td>
-                    <td>4.0</td>
-                  </tr>
-                  <tr>
-                    <td>Vagueira</td>
-                    <td>3.5</td>
-                  </tr>
-                </tbody>
-            </table>
-        </section>
+        <!-- LAST VIDEOS -->
+        <div class="container py-5">
+            <!-- DINAMIC GRID -->
+            <h2 class="mb-4 ">Our Last Videos</h2>
+            <div class="row" id="grid-container"></div>
+        </div>
 
         <!-- GALLERY -->
         <section class="gallery">
