added a grid with the most popular youtube videos - in the about page

--- a/about.html
+++ b/about.html
@@ -60,9 +60,14 @@
 
         <!-- LAST VIDEOS -->
         <div class="container py-5">
-            <!-- DINAMIC GRID -->
-            <h2 class="mb-4 ">Our Last Videos</h2>
-            <div class="row" id="grid-container"></div>
+            <h2 class="mb-4">Our Last Videos</h2>
+            <div class="row" id="grid-container-latest"></div>
+        </div>
+
+        <!-- MOST POPULAR VIDEOS -->
+        <div class="container py-5">
+            <h2 class="mb-4">Most Popular</h2>
+            <div class="row" id="grid-container-popular"></div>
         </div>
 
         <!-- GALLERY -->
