problem with video in the about page resolved

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     We have decided to start this adventure back in 2018 and... here we are! 
                     We never thought we would collect such beautifull memories and moments. 
                     The world sure is full with beauty, you just have to take a moment to stop and look aorund you!
-                    We hope we can still capture it and show it to you guys. Hope you enjoy our little adventures and funny moments. <br>
+                    We hope we can still capture it and show it to you guys. Enjoy our little adventures and funny moments. <br>
                     <small>- Keep Exploring! Regards from Roger and Ricky</small>
                 </p>
         </section>
