readjustment in the videos section + rwd + code cleaning

--- a/about.html
+++ b/about.html
@@ -61,13 +61,13 @@
         <!-- LAST VIDEOS -->
         <div class="container py-5">
             <h2 class="mb-4">Our Last Videos</h2>
-            <div class="row" id="grid-container-latest"></div>
+            <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
         </div>
 
         <!-- MOST POPULAR VIDEOS -->
         <div class="container py-5">
             <h2 class="mb-4">Most Popular</h2>
-            <div class="row" id="grid-container-popular"></div>
+            <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
         </div>
 
         <!-- GALLERY -->
