new social icons + fixed some RWD errors

--- a/about.html
+++ b/about.html
@@ -60,19 +60,19 @@
 
         <!-- LAST VIDEOS -->
         <div class="container py-5">
-            <h2 class="mb-4">Our Last Videos</h2>
+            <h2 class="mb-4 fw-semibold">Our Last Videos</h2>
             <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
         </div>
 
         <!-- MOST POPULAR VIDEOS -->
         <div class="container py-5">
-            <h2 class="mb-4">Most Popular</h2>
+            <h2 class="mb-4 fw-semibold">Most Popular</h2>
             <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
         </div>
 
         <!-- GALLERY -->
         <section class="gallery">
-            <h3>Some pictures we took:</h3>
+            <h3 class="fw-semibold">Some pictures we took:</h3>
             <div class="container-fluid mt-4 mb-4">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4 p-0">
@@ -118,11 +118,10 @@
                 </div>
             </div>
         </div>
-
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/transition.js"></script>
-    <script src="js/carousel.js"></script>
+    <script src="js/multimedia.js"></script>
 </body>
 </html>
