--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         
         <video class="object-fit-cover position-absolute top-0 start-0 w-100 h-100 opacity-75" src="multimedia/video/Teaser.mp4" muted loop autoplay></video>
 
-        <section class="home_text">
+        <section class="home_text text-center text-md-start">
             <h2>Never Stop</h2>
             <h3>Exploring the World</h3>
             <p>Hi there! We are Ricky and Roger, two guys from Portugal. We both are fishermen, divers, underwater and treasure hunters. We love nature and everything it offers us. If you like these things too, come join us in our adventure!</p>
         </section>
 
         <!-- SOCIAL LINKS -->
-        <div class="position-fixed position-md-absolute bottom-0 start-0 z-10 py-3 py-md-0 ms-md-4 mb-md-3">
-            <div class="d-flex flex-row justify-content-start ps-3">
+        <div class="social position-fixed bottom-0 start-0 z-10 mb-4">
+            <div class="d-flex flex-row justify-content-start">
                 <div class="col-auto"> 
                     <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon" style="filter: invert(1);">
@@ -67,6 +67,11 @@
                 <div class="col-auto">
                     <a href="https://www.youtube.com/@AltosSpots/featured" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon" style="filter: invert(1);">
+                    </a>
+                </div>
+                <div class="col-auto">
+                    <a href="https://www.patreon.com/profile/creators?u=17127447" class="d-inline-block custom-social-link"> 
+                        <img src="multimedia/images/patreon.png" alt="Patreon icon" class="patreon img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
             </div>
