stored all multimedia in data.js + added more img

--- a/contact.html
+++ b/contact.html
@@ -63,27 +63,31 @@
                         <a id="LinksEmail" href="mailto:rickyrogeradventures@gmail.com">rickyrogeradventures@gmail.com</a>
                     </div>
                     
-                    <p class="fs-5 text-black mb-5">You can also directly send your message from here by filling the next form.</p>
+                   <!--  <p class="fs-5 text-black mb-5">You can also directly send your message from here by filling the next form.</p> -->
+                </div>
+
+                <div class="text-md-start text-center mb-3 mt-4">
+                    <img class="w-75 rounded-5" src="multimedia/images/photo_11.jpg" alt="Ricky and Roger">
                 </div>
 
                 <!-- SOCIAL LINKS: DESKTOP VERSION -->
                 <div class="d-none d-lg-flex flex-row justify-content-start">
-                    <div class="col-auto mt-5"> 
+                    <div class="col-auto mt-3"> 
                         <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon">
                         </a>
                     </div>
-                    <div class="col-auto mt-5">
+                    <div class="col-auto mt-3">
                         <a href="https://www.instagram.com/altos_spots/" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/instagram.png" alt="Instagram icon" class="img-fluid social_icon">
                         </a>
                     </div>
-                    <div class="col-auto mt-5">
+                    <div class="col-auto mt-3">
                         <a href="https://www.youtube.com/@AltosSpots/featured" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon">
                         </a>
                     </div>
-                    <div class="col-auto mt-5">
+                    <div class="col-auto mt-3">
                         <a href="https://www.patreon.com/profile/creators?u=17127447" class="d-inline-block custom-social-link"> 
                             <img src="multimedia/images/patreon.png" alt="Patreon icon" class="patreon img-fluid social_icon">
                         </a>
@@ -94,6 +98,7 @@
 
             <!-- FORM -->
             <div class="col-md-8 col-lg-4 mx-auto"> 
+                <p class="fs-5 text-black mb-5 text-md-start text-center">You can also directly send your message from here by filling the next form.</p>
                 <form method="POST" class="row g-3 needs-validation p-4 border rounded shadow-sm" novalidate id="formulario">
                     <div class="form-floating col-md-12">
                         <input type="text" class="form-control" id="floatingName" placeholder="Nome Completo" required>
