--- a/about.html
+++ b/about.html
@@ -74,17 +74,7 @@
         <section class="gallery">
             <h3 class="fw-semibold">Some pictures we took:</h3>
             <div class="container-fluid mt-4 mb-4">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 p-0">
-                        <img class="w-200 p-2 gallery-img" src="multimedia/images/fishing.jpg" alt="roger fishing at barragem da aguieira" data-bs-toggle="modal" data-bs-target="#imageModal" data-index="0">
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 p-0">
-                        <img class="w-200 p-2 gallery-img" src="multimedia/images/landscape.jpg" alt="roger at passadiços do paiva" data-bs-toggle="modal" data-bs-target="#imageModal" data-index="1">
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 p-0">
-                        <img class="w-200 p-2 gallery-img" src="multimedia/images/sunset.jpg" alt="sunset at vagueira" data-bs-toggle="modal" data-bs-target="#imageModal" data-index="2">
-                    </div>
-                </div>
+                <div class="row" id="gallery-container"></div>
             </div>
         </section>
 
@@ -95,16 +85,10 @@
                     <div class="modal-body">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         <div id="modalCarousel" class="carousel slide">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img id="modalImage" class="d-block w-100" src="" alt="">
-                                </div>
-                            </div>
+                            <!-- Indicators will be generated dynamically -->
+                            <div class="carousel-indicators" id="carouselIndicators"></div>
+                            <!-- Carousel items will be generated dynamically -->
+                            <div class="carousel-inner" id="carouselInner"></div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#modalCarousel" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
@@ -122,6 +106,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/transition.js"></script>
-    <script src="js/multimedia.js"></script>
+    <script type="module" src="js/multimedia.js"></script>
 </body>
 </html>
