--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="text-md-start text-center mb-3 mt-4">
-                    <img class="w-75 rounded-5" src="multimedia/images/photo_11.jpg" alt="Ricky and Roger">
+                    <img class="w-75 rounded-5" src="multimedia/images/photo_11.jpg" alt="Roger relaxing underwater">
                 </div>
 
                 <!-- SOCIAL LINKS: DESKTOP VERSION -->
