fix: adjust on social links and container

--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
 
         <!-- SOCIAL LINKS: MOBILE VERSION -->
         <div class="row d-lg-none">  
-            <div class="d-flex flex-row justify-content-start">
+            <div class="d-flex flex-row justify-content-start overflow-hidden">
                 <div class="col-auto"> 
                     <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon">
