--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="multimedia/favicon_io/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="multimedia/favicon_io/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body class="about_body fade">
@@ -72,9 +73,19 @@
         <!-- GALLERY -->
         <section class="gallery">
             <h3 class="fw-semibold">Some pictures we took:</h3>
-            <div class="container-fluid mt-4 mb-4">
-                <div class="row" id="gallery-container"></div>
-            </div>
+            <div class="position-relative gallery-wrapper mb-5">
+                <button class="scroll-btn scroll-left btn btn-dark d-flex align-items-center justify-content-center" id="scrollLeftBtn" aria-label="Scroll left">
+                  <i class="bi bi-chevron-left fs-4"></i>
+                </button>
+              
+                <div class="gallery-slider-container overflow-auto">
+                  <div class="gallery-slider d-flex flex-nowrap gap-3 px-3 py-2" id="gallery-container"></div>
+                </div>
+              
+                <button class="scroll-btn scroll-right btn btn-dark d-flex align-items-center justify-content-center" id="scrollRightBtn" aria-label="Scroll right">
+                  <i class="bi bi-chevron-right fs-4"></i>
+                </button>
+              </div>              
         </section>
 
         <!-- DINAMIC MODAL -->
