style: added a 'see more' btn

--- a/about.html
+++ b/about.html
@@ -62,12 +62,20 @@
         <div class="container py-5">
             <h2 class="mb-4 fw-semibold">Our Last Videos</h2>
             <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
+
+            <div class="py-lg-5 d-md-block">
+                <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
+            </div>
         </div>
 
         <!-- MOST POPULAR VIDEOS -->
-        <div class="container py-5">
+        <div class="container py-4">
             <h2 class="mb-4 fw-semibold">Most Popular</h2>
             <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
+
+            <div>
+                <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
+            </div>
         </div>
 
         <!-- GALLERY -->
