style: adjusted btn padding + new text-align

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <!-- ABOUT -->
         <section class="about_text">
             <h3>About us</h3>
-                <p class="text-center text-md-start fs-5">
+                <p class="text-md-start fs-5">
                     We have decided to start this adventure back in 2018 and... here we are! 
                     We never thought we would collect such beautifull memories and moments. 
                     The world sure is full with beauty, you just have to take a moment to stop and look aorund you!
@@ -63,7 +63,7 @@
             <h2 class="mb-4 fw-semibold">Our Last Videos</h2>
             <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
 
-            <div class="py-lg-5 d-md-block">
+            <div class="py-3 py-lg-5 d-md-block">
                 <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <h2 class="mb-4 fw-semibold">Most Popular</h2>
             <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
 
-            <div>
+            <div class="py-3">
                 <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
             </div>
         </div>
