--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <video class="object-fit-cover position-absolute top-0 start-0 w-100 h-100 opacity-75" src="multimedia/video/Teaser.mp4" muted loop autoplay></video>
 
-        <section class="home_text text-center text-md-start">
+        <section class="home_text text-center text-md-start w-100">
             <h2>Never Stop</h2>
             <h3>Exploring the World</h3>
             <p>Hi there! We are Ricky and Roger, two guys from Portugal. We both are fishermen, divers, underwater and treasure hunters. We love nature and everything it offers us. If you like these things too, come join us in our adventure!</p>
