chore: added a target blank to the links

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active fw-bold text-decoration-underline" aria-current="page" href="about.html">About</a>
+                                <a class="nav-link active fw-bold" aria-current="page" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
@@ -64,7 +64,7 @@
             <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
 
             <div class="py-3 py-lg-5 d-md-block">
-                <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
+                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light  fw-bold">See More</a>
             </div>
         </div>
 
@@ -73,8 +73,8 @@
             <h2 class="mb-4 fw-semibold">Most Popular</h2>
             <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
 
-            <div class="py-3">
-                <button type="button" class="btn btn-light btn-sm fw-bold"><a href="https://www.youtube.com/@AltosSpots/featured">See More</a></button>
+            <div class="py-3 py-lg-5 d-md-block">
+                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light  fw-bold">See More</a>
             </div>
         </div>
 
