--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" aria-current="page" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold text-decoration-underline" href="contact.html">Contact</a>
+                            <a class="nav-link active fw-bold" href="contact.html">Contact</a>
                         </li> 
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="d-flex align-items-center gap-2 mb-3 justify-content-md-start justify-content-center">
                         <i class="bi bi-envelope-fill"></i>
-                        <a id="LinksEmail" href="mailto:rickyrogeradventures@gmail.com">rickyrogeradventures@gmail.com</a>
+                        <a id="LinksEmail" href="mailto:rickyrogeradventures@gmail.com" class="text-lowercase fs-5">rickyrogeradventures@gmail.com</a>
                     </div>
                 </div>
 
@@ -70,22 +70,22 @@
                 <!-- SOCIAL LINKS: DESKTOP VERSION -->
                 <div class="d-none d-lg-flex flex-row justify-content-start">
                     <div class="col-auto mt-3"> 
-                        <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
+                        <a href="https://www.facebook.com/AltosSpots" target="_blank" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon">
                         </a>
                     </div>
                     <div class="col-auto mt-3">
-                        <a href="https://www.instagram.com/altos_spots/" class="d-inline-block custom-social-link">
+                        <a href="https://www.instagram.com/altos_spots/" target="_blank" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/instagram.png" alt="Instagram icon" class="img-fluid social_icon">
                         </a>
                     </div>
                     <div class="col-auto mt-3">
-                        <a href="https://www.youtube.com/@AltosSpots/featured" class="d-inline-block custom-social-link">
+                        <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="d-inline-block custom-social-link">
                             <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon">
                         </a>
                     </div>
                     <div class="col-auto mt-3">
-                        <a href="https://www.patreon.com/profile/creators?u=17127447" class="d-inline-block custom-social-link"> 
+                        <a href="https://www.patreon.com/profile/creators?u=17127447" target="_blank" class="d-inline-block custom-social-link"> 
                             <img src="multimedia/images/patreon.png" alt="Patreon icon" class="patreon img-fluid social_icon">
                         </a>
                     </div>
@@ -178,22 +178,22 @@
         <div class="row d-lg-none">  
             <div class="d-flex flex-row justify-content-start overflow-hidden">
                 <div class="col-auto"> 
-                    <a href="https://www.facebook.com/AltosSpots" class="d-inline-block custom-social-link">
+                    <a href="https://www.facebook.com/AltosSpots" target="_blank" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.instagram.com/altos_spots/" class="d-inline-block custom-social-link">
+                    <a href="https://www.instagram.com/altos_spots/" target="_blank" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/instagram.png" alt="Instagram icon" class="img-fluid social_icon">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.youtube.com/@AltosSpots/featured" class="d-inline-block custom-social-link">
+                    <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.patreon.com/profile/creators?u=17127447" class="d-inline-block custom-social-link"> 
+                    <a href="https://www.patreon.com/profile/creators?u=17127447" target="_blank" class="d-inline-block custom-social-link"> 
                         <img src="multimedia/images/patreon.png" alt="Patreon icon" class="patreon img-fluid social_icon">
                     </a>
                 </div>
