chore: added rel noopener noreferrer to all links

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <div class="row d-flex justify-content-center" id="grid-container-latest"></div>
 
             <div class="py-3 py-lg-5 d-md-block">
-                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light  fw-bold">See More</a>
+                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light fw-bold" rel="noopener noreferrer">See More</a>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
             <div class="row d-flex justify-content-center" id="grid-container-popular"></div>
 
             <div class="py-3 py-lg-5 d-md-block">
-                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light  fw-bold">See More</a>
+                <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="btn btn-outline-light fw-bold" rel="noopener noreferrer">See More</a>
             </div>
         </div>
 
