--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
         <div class="social position-fixed bottom-0 start-0 z-10 mb-4">
             <div class="d-flex flex-row justify-content-start">
                 <div class="col-auto"> 
-                    <a href="https://www.facebook.com/AltosSpots" target="_blank" class="d-inline-block custom-social-link">
+                    <a href="https://www.facebook.com/AltosSpots" target="_blank" rel="noopener noreferrer" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/facebook.png" alt="Facebook icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.instagram.com/altos_spots/" target="_blank" class="d-inline-block custom-social-link">
+                    <a href="https://www.instagram.com/altos_spots/" target="_blank" rel="noopener noreferrer" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/instagram.png" alt="Instagram icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" class="d-inline-block custom-social-link">
+                    <a href="https://www.youtube.com/@AltosSpots/featured" target="_blank" rel="noopener noreferrer" class="d-inline-block custom-social-link">
                         <img src="multimedia/images/youtube.png" alt="Youtube icon" class="img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://www.patreon.com/profile/creators?u=17127447" target="_blank" class="d-inline-block custom-social-link"> 
+                    <a href="https://www.patreon.com/profile/creators?u=17127447" target="_blank" rel="noopener noreferrer" class="d-inline-block custom-social-link"> 
                         <img src="multimedia/images/patreon.png" alt="Patreon icon" class="patreon img-fluid social_icon" style="filter: invert(1);">
                     </a>
                 </div>
